# declarative-mlir-compiler

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  \  build  env  lib.ll  list_targets  optest.py  test.py
cmake/module/: AddDMC.cmake  DeclarativeCompiler.cmake
include/: CMakeLists.txt
include/dmc/: CMakeLists.txt  Kind.h
include/dmc/Dynamic/: Alias.h  DynamicAttribute.h  DynamicContext.h  DynamicDialect.h  DynamicObject.h  DynamicOperation.h  DynamicType.h  Metadata.h  TypeIDAllocator.h
include/dmc/Embed/: Constraints.h  Expose.h  InMemoryDef.h  Init.h  OpFormatGen.h  ParserPrinter.h  PythonGen.h  TypeFormatGen.h
include/dmc/IO/: ModuleWriter.h
include/dmc/Python/: APComplex.h  DialectAsm.h  Expose.h  OpAsm.h  Polymorphic.h  PyMLIR.h
include/dmc/Spec/: CMakeLists.txt  DialectGen.h  FormatOp.h  FormatOp.td  HasChildren.h  LowerOpaqueType.h  NamedConstraints.h  OpTrait.h  OpType.h  ParameterList.h  ParameterList.td  Parsing.h  ReparseOpInterface.h  ReparseOpInterface.td  Spec.h  SpecAttrBase.h  SpecAttrDetail.h  SpecAttrImplementation.h  SpecAttrSwitch.h  SpecAttrs.h  SpecDialect.h  SpecKinds.h  SpecOps.h  SpecRegion.h  SpecRegionSwitch.h  SpecSuccessor.h  SpecSuccessorSwitch.h  SpecTypeDetail.h  SpecTypeImplementation.h  SpecTypeSwitch.h  SpecTypes.h  Support.h
include/dmc/Traits/: Kinds.h  OpTrait.h  Registry.h  SpecTraits.h  StandardTraits.h
lib/: CMakeLists.txt
lib/Dynamic/: CMakeLists.txt  DynamicAttribute.cpp  DynamicContext.cpp  DynamicDialect.cpp  DynamicDialectImpl.cpp  DynamicObject.cpp  DynamicOperation.cpp  DynamicType.cpp  TypeIDAllocator.cpp
lib/Embed/: CMakeLists.txt  Constraints.cpp  DynamicType.cpp  Expose.cpp  FormatUtils.cpp  FormatUtils.h  InMemoryDef.cpp  Init.cpp  OpFormatGen.cpp  ParserPrinter.cpp  PythonGen.cpp  PythonGen.h  Scope.cpp  Scope.h  Spec.cpp  TypeFormatGen.cpp  ]
lib/IO/: CMakeLists.txt  ModuleWriter.cpp
lib/Python/: AsmUtils.h  Attribute.cpp  Attribute.h  BuildableType.cpp  CMakeLists.txt  Context.cpp  Context.h  DialectAsm.cpp  DllInit.cpp  Exception.h  Expose.cpp  Expose.h  ExposeArrayAttr.cpp  ExposeAttribute.cpp  ExposeBuilder.cpp  ExposeDialectAsm.cpp  ExposeDictAttr.cpp  ExposeElementsAttr.cpp  ExposeFunctionType.cpp  ExposeIntFPAttr.cpp  ExposeLocation.cpp  ExposeModule.cpp  ExposeOpAsm.cpp  ExposeOpaqueType.cpp  ExposeOps.cpp  ExposeParser.cpp  ExposeShapedTypes.cpp  ExposeStandardTypes.cpp  ExposeSymbolRefAttr.cpp  ExposeType.cpp  ExposeValue.cpp  ExternalModule.cpp  Identifier.cpp  Identifier.h  Location.cpp  Location.h  Module.cpp  Module.h  OpAsm.cpp  OpBase.h  (+8 more)
lib/Spec/: CMakeLists.txt  DialectGen.cpp  FormatOp.cpp  LowerOpaqueType.cpp  OpReparsing.cpp  OpTrait.cpp  OpType.cpp  ParameterList.cpp  Parsing.cpp  ReparseOpInterface.cpp  SpecAttrImplementation.cpp  SpecAttrs.cpp  SpecDialect.cpp  SpecOps.cpp  SpecRegion.cpp  SpecSuccessor.cpp  SpecTypeDetail.cpp  SpecTypeImplementation.cpp  SpecTypeParsing.cpp  SpecTypes.cpp
lib/Traits/: CMakeLists.txt  GenericConstructor.h  OpTrait.cpp  Registry.cpp  SpecTraits.cpp  StandardTraits.cpp
lua/: .gitignore  CMakeLists.txt  Lua.g4  LuaToLLVM.cpp  LuaToLuaC.cpp  LuaToLuaLib.cpp  Makefile  b.mlir  bin.mlir  builtins.cpp  dialect.mlir  fannkuch.lua  impl.c  impl.cpp  impl.h  lib.c  lib.h  lib.ll  lib.mlir  loops.lua  lua.h  lua.mlir  luac.cpp  luac.py  main.c  main.mlir  markov.in  markov.lua  markov.mlir  perf.lua  perf.mlir  preliminary-results.txt  test.c  test.lua
oec/: .gitignore  CMakeLists.txt  Makefile  ast.txt  dl_stencil.cpp  laplace.mlir  main.cpp  oec.py  python.mlir  stencil.py  test.py
spec/: dialect.mlir  eg.mlir  laplace.mlir  lua.mlir  namedtest.mlir  namedtestm.mlir  stencil.mlir  stenciltest.mlir  test.mlir
tools/: CMakeLists.txt  dialectgen.cpp  main.cpp  pythonembed.cpp  spec.cpp  statickind.cpp
