add_library(DMCSpec
  SpecDialect.cpp
  SpecTypes.cpp
  SpecTypeImplementation.cpp
  SpecTypeDetail.cpp
  SpecOps.cpp
  SpecAttrs.cpp
  SpecAttrImplementation.cpp
  DialectGen.cpp
  LowerOpaqueType.cpp
  ParameterList.cpp
  )
target_link_libraries(DMCSpec
  MLIRIR
  MLIRTransforms
  )
add_dependencies(DMCSpec
  DMCParameterListIncGen
  )
