add_library(DMCSpec
  SpecDialect.cpp
  SpecTypes.cpp
  SpecTypeImplementation.cpp
  SpecTypeDetail.cpp
  SpecOps.cpp
  SpecAttrs.cpp
  SpecRegion.cpp
  SpecAttrImplementation.cpp
  DialectGen.cpp
  ParameterList.cpp
  ReparseOpInterface.cpp
  OpReparsing.cpp
  Parsing.cpp
  )
target_link_libraries(DMCSpec
  MLIRIR
  MLIRTransforms
  )
add_dependencies(DMCSpec
  DMCParameterListIncGen
  DMCReparseOpInterfaceIncGen
  )
