add_library(DMCSpec
  SpecDialect.cpp
  SpecTypes.cpp
  SpecTypeDetail.cpp
  SpecOps.cpp
  SpecAttrs.cpp
  SpecRegion.cpp
  SpecSuccessor.cpp
  SpecTypeImplementation.cpp
  SpecAttrImplementation.cpp
  DialectGen.cpp
  ParameterList.cpp
  ReparseOpInterface.cpp
  OpReparsing.cpp
  Parsing.cpp
  OpType.cpp
  )
target_link_libraries(DMCSpec
  MLIRIR
  MLIRTransforms
  )
add_dependencies(DMCSpec
  DMCParameterListIncGen
  DMCReparseOpInterfaceIncGen
  )
